remove personal dropdown

--- a/home.html
+++ b/home.html
@@ -16,13 +16,9 @@
             </div>
         </div>
         <div class="right">
-            <button class="user" onclick="displayUser()">
+            <button class="user">
                 <img src="image/user.png" alt="personal icon">
             </button>
-            <div class="dropdown">
-                <a href="#">Profile</a>
-                <a href="#">Logout</a>
-            </div>
         </div>
     </div>
     <div class="hr-body">
