--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="right">
-            <button class="user">
+            <button class="user" onclick="displayUser()">
                 <img src="/image/user.png" alt="personal icon">
             </button>
         </div>
