--- a/home.html
+++ b/home.html
@@ -10,15 +10,18 @@
 <body>
     <div class="topbar">
         <div class="left">
-            <img src="/image/cv.png" alt="page logo">
+            <img src="image/cv.png" alt="page logo">
             <div class="text-logo">
                 <p>Resume.io</p>
             </div>
         </div>
         <div class="right">
             <button class="user" onclick="displayUser()">
-                <img src="/image/user.png" alt="personal icon">
+                <img src="image/user.png" alt="personal icon">
             </button>
+            <div class="dropdown">
+                <a href="Login.html">Logout</a>
+            </div>
         </div>
     </div>
     <div class="hr-body">
@@ -28,7 +31,7 @@
         <div class="headline">
             <h2>Resume</h2>
             <button class="new-button">
-                <img src="/image/plus.png" alt="new sign">
+                <img src="image/plus.png" alt="new sign">
                 <p>Create new</p>
             </button>
         </div>
@@ -39,12 +42,12 @@
             <div class="resume">
                 <div class="edit">
                     <button class="edit-button">
-                        <img src="/image/pen.png" alt="">
+                        <img src="image/pen.png" alt="">
                     </button>
                 </div>
                 <div class="delete">
                     <button class="delete-button">
-                        <img src="/image/bin.png" alt="">
+                        <img src="image/bin.png" alt="">
                     </button>
                 </div>
                 <h2>Tony Stark</h2>
@@ -69,12 +72,12 @@
             <div class="resume">
                 <div class="edit">
                     <button class="edit-button">
-                        <img src="/image/pen.png" alt="">
+                        <img src="image/pen.png" alt="">
                     </button>
                 </div>
                 <div class="delete">
                     <button class="delete-button">
-                        <img src="/image/bin.png" alt="">
+                        <img src="image/bin.png" alt="">
                     </button>
                 </div>
                 <h2>Tony Stark</h2>
@@ -99,12 +102,12 @@
             <div class="resume">
                 <div class="edit">
                     <button class="edit-button">
-                        <img src="/image/pen.png" alt="">
+                        <img src="image/pen.png" alt="">
                     </button>
                 </div>
                 <div class="delete">
                     <button class="delete-button">
-                        <img src="/image/bin.png" alt="">
+                        <img src="image/bin.png" alt="">
                     </button>
                 </div>
                 <h2>Tony Stark</h2>
@@ -128,12 +131,12 @@
             </div>
             <div class="add-resume">
                 <button class="add-button">
-                    <img src="/image/add.png" alt="">
+                    <img src="image/add.png" alt="">
                 </button>
                 
             </div>        
         </div>
     </div>
-    <script src="/home.js"></script>
+    <script src="home.js" defer></script>
 </body>
 </html>
